# plex-coverflow

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: tray.rgba
src-tauri/src/: lib.rs  media_bridge.rs
src-tauri/swift-media/: Package.swift
src-tauri/swift-media/Sources/MediaPlugin/: MediaPlugin.swift
