[package]
name = "overflow"
version = "2.0.1"
description = "Cover Flow music player for Plex"
authors = ["Doug Belshaw"]
license = "AGPL-3.0"
repository = "https://github.com/dajbelshaw/plex-coverflow"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-window-state = "2"
